加速度センサーでコントロールできるように変更

--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,10 @@
       </button>
     </div>
     <div class="none" id="controller-wrapper">
-      <div class="columns">
-        <div class="column col-4"></div>
-        <div class="column col-4"></div>
-        <div class="column col-4"></div>
-      </div>
+      <span id="debug"></span>
+      <button class="btn btn-accele btn-full btn-action" id="accele">
+        Accele
+      </button>
     </div>
   </div>
 
