--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
       <button class="btn btn-accele btn-full btn-action" id="accele">
         Accele
       </button>
-      <button class="btn btn-accele btn-mini btn-action left" id="spin">
+      <button class="btn btn-success btn-accele btn-mini btn-action left" id="spin">
         <i class="fa fa-fan"></i>
       </button>
-      <button class="btn btn-accele btn-mini btn-action right" id="spin-right">
+      <button class="btn btn-success btn-accele btn-mini btn-action right" id="spin-right">
         <i class="fa fa-fan"></i>
       </button>
     </div>
